# openalex-local

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  openalex-local-quality-audit-on-ubuntu-latest.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  test.yml
.scitex/dev/: cli-audit-dict.yaml  config.yaml
.scitex/openalex-local/runtime/: README.md
docs/OpeanAlex-Official/: 00_overview.md  01_data_format.md  02_download.md  03_upload_overview.md  04_load_data_warehouse.md  05_load_relational_database.md  snapshot.md
docs/sphinx/: cli_reference.rst  conf.py  http_api.rst  index.rst  installation.rst  quickstart.rst
docs/sphinx/api/: modules.rst  openalex_local.rst
examples/: 00_run_all.sh  01_basic_search.py  01_quickstart.py  02_cli_demo.sh  02_get_by_doi.py  03_batch_processing.py  03_citations.py  05_cache_workflow.py  06_async_search.py  07_enrich_workflow.py  09_plot_if_vs_jcr.py  10_quickstart.ipynb  11_abstract_coverage.py  README.md
scripts/: create_test_db.py
scripts/database/: 00_download_all.sh  00_download_all_entities.sh  00_download_safe.sh  01_download_other_entities.sh  01_download_snapshot.py  02_build_database.py  03_build_fts_index.py  04_build_sources_table.py  05_build_citations_table.py  06_build_if_indexes.py  07_add_ref_count_column.py  09_build_if_table.py  10_differential_update.py  README.md  _build_helpers.py
scripts/setup/: check_prerequisites.sh
scripts/utils/: status.sh
src/openalex_local/: __init__.py  __main__.py  _jobs_provider.py  _seed_last_sync.py  aio.py  api.py  cache.py  cli.py  config.py  jobs.py  models.py  remote.py  server.py
src/openalex_local/_cache/: __init__.py  core.py  export.py  models.py  utils.py
src/openalex_local/_cli/: __init__.py  check.py  cli.py  cli_cache.py  export_if.py  mcp.py  mcp_server.py  search_by_doi.py  status.py  update.py  utils.py
src/openalex_local/_core/: __init__.py  api.py  checker.py  config.py  db.py  export.py  fts.py  models.py  paths.py  update.py
src/openalex_local/_remote/: __init__.py  base.py
src/openalex_local/_server/: __init__.py  routes.py
src/openalex_local/_skills/openalex-local/: 01_installation.md  01_quick-start.md  02_quick-start.md  02_search-syntax.md  03_python-api.md  04_cli-reference.md  06_http-api.md  10_database-setup.md  11_cli-reference.md  12_mcp-tools.md  14_search-syntax.md  SKILL.md  cli-reference.md  mcp-tools.md  quick-start.md  search-syntax.md
src/openalex_local/_sphinx_html/: .buildinfo  cli_reference.html  genindex.html  http_api.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/openalex_local/_sphinx_html/.doctrees/: cli_reference.doctree  environment.pickle  http_api.doctree  index.doctree  installation.doctree  quickstart.doctree
src/openalex_local/_sphinx_html/.doctrees/api/: openalex_local.doctree
src/openalex_local/_sphinx_html/_modules/: index.html
src/openalex_local/_sphinx_html/_modules/openalex_local/_core/: api.html  config.html  export.html  models.html
src/openalex_local/_sphinx_html/api/: openalex_local.html
src/openalex_local/skills/: SKILL.md
src/openalex_local/skills/references/: database-setup.md  search-syntax.md
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_jobs.py  test_jobs_provider.py  test_models.py  test_skills_quality.py
tests/develop/: test_audit.py
tests/examples/: test_01_quickstart.py  test_02_basic_search.py  test_03_get_by_doi.py  test_04_citations.py  test_05_cache_workflow.py  test_06_async_search.py  test_07_enrich_workflow.py  test_08_cli_demo.py  test_09_plot_if_vs_jcr.py  test_10_quickstart.py  test_11_abstract_coverage.py
tests/fixtures/: sample_works.json
tests/integration/: test_cross_package_imports.py
tests/openalex_local/: __init__.py  test_models.py
