[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalex-local"
version = "0.3.2"
description = "Local OpenAlex database with 284M+ works, abstracts, and semantic search"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Yusuke Watanabe", email = "ywatanabe@alumni.u-tokyo.ac.jp"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["openalex", "academic", "research", "abstracts", "semantic-search"]
dependencies = [
    "click>=8.0",
    "awscli>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]
mcp = [
    "fastmcp>=0.4",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "openalex-local[server,mcp,dev,docs]",
]

[project.scripts]
openalex-local = "openalex_local._cli.cli:main"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/openalex-local"
Repository = "https://github.com/ywatanabe1989/openalex-local"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
