[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalex-local"
version = "0.7.5"
description = "Local OpenAlex database with 284M+ works, abstracts, and semantic search"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    {name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["openalex", "academic", "research", "abstracts", "semantic-search"]
dependencies = [
    "click>=8.0",
    "awscli>=1.0",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.100",
    "fastmcp>=2.0.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest>=7.0",
    "scitex-dev>=0.11.5",
    "uvicorn>=0.23",
]
mcp = [
    "fastmcp>=2.0.0",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "openalex-local[server,mcp,dev,docs]",
]

[project.scripts]
openalex-local = "openalex_local._cli.cli:main"

[project.entry-points."scitex_dev.docs"]
openalex-local = "openalex_local"

[project.entry-points."scitex_dev.skills"]
openalex-local = "openalex_local"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/openalex-local"
Documentation = "https://openalex-local.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/openalex-local"
Issues = "https://github.com/ywatanabe1989/openalex-local/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openalex_local = ["_skills/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
